<resources>
    <string name="app_name">NumbersEncyclopedia</string>

    <string name="banner_ad_unit_id">ca-app-pub-4940287222885522/6932861595</string>


    <string name="trivia">Trivia Fact</string>
    <string name="math">Math Fact</string>
    <string name="year">Year Fact</string>
    <string name="date">Date Fact</string>

    <string name="explore_btn">Explore</string>
    <string name="frontText">Numbers-Encyclopedia lets you find interesting|hidden|meaningful facts about every number that exists.</string>
    <string name="Error_Message">Sorry.This App Only Understands Numbers.</string>
</resources>
