<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.divan.factcheck.MainActivity"
    android:background="@drawable/yeta">

    <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:id="@+id/card"
    android:layout_height="120dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_centerHorizontal="true"
    android:elevation="5dp"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="#3A539B"
        >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="24dp"
            android:layout_toStartOf="@+id/button2"
            app:srcCompat="@drawable/fact"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="30dp"
            android:text="@string/explore_btn"
            android:textColor="#ffffff"
            android:background="@drawable/shape" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button2"
            android:layout_alignStart="@+id/button2"
            android:layout_marginBottom="14dp"
            android:layout_marginStart="17dp"
            android:gravity="center"
            android:textColor="#FFF"
            android:text="@string/trivia"
            android:textSize="22sp" />
    </RelativeLayout>
</android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:elevation="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/card1"
        app:cardBackgroundColor="#34495E"
        android:layout_below="@+id/card"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">


            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="24dp"
                android:layout_toStartOf="@+id/button1"
                app:srcCompat="@drawable/date2"
                />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView1"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="7dp"
                android:layout_marginEnd="30dp"
                android:text="@string/explore_btn"
                android:textColor="#ffffff"
                android:background="@drawable/shape" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button1"
                android:layout_alignStart="@+id/button1"
                android:layout_marginBottom="14dp"
                android:layout_marginStart="17dp"
                android:gravity="center"
                android:textColor="#FFF"
                android:text="@string/date"
                android:textSize="22sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:elevation="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/card2"
        android:layout_below="@+id/card1"
        app:cardBackgroundColor="#67809F"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="24dp"
                android:layout_toStartOf="@+id/button3"
                app:srcCompat="@drawable/math"
                />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView2"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="7dp"
                android:layout_marginEnd="30dp"
                android:text="@string/explore_btn"
                android:textColor="#ffffff"
                android:background="@drawable/shape" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button3"
                android:layout_alignStart="@+id/button3"
                android:layout_marginBottom="14dp"
                android:layout_marginStart="17dp"
                android:gravity="center"
                android:textColor="#FFF"
                android:text="@string/math"
                android:textSize="22sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:elevation="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/card2"
        app:cardBackgroundColor="#2574A9"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="24dp"
                android:layout_toStartOf="@+id/button4"
                app:srcCompat="@drawable/year"
                />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView4"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="7dp"
                android:layout_marginEnd="30dp"
                android:text="@string/explore_btn"
                android:textColor="#ffffff"
                android:background="@drawable/shape" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button4"
                android:layout_alignStart="@+id/button4"
                android:layout_marginBottom="14dp"
                android:layout_marginStart="17dp"
                android:gravity="center"
                android:textColor="#FFF"
                android:text="@string/year"
                android:textSize="22sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id">

    </com.google.android.gms.ads.AdView>

    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_nav"
        android:layout_alignParentBottom="true"
        app:menu="@menu/main_menu"
        app:itemIconTint="@color/colorWhite"
        app:itemTextColor="@color/colorWhite"/>


</RelativeLayout>
