<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pur"
    tools:context="com.rohatgi.developer.factcheck.DesignActivity">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="110dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="20"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="10dp"
            android:layout_weight="4"
            app:cardCornerRadius="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="12dp"
                android:src="@drawable/fact"

                />

            <Button
                android:id="@+id/triviaBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="130dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape"
                android:text="@string/trivia"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:layout_gravity="right"
                android:textStyle="bold"
                android:textAllCaps="false"
                />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="10dp"
            android:layout_weight="4"
            app:cardCornerRadius="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="2dp"
                android:layout_gravity="right"
                android:layout_marginRight="12dp"
                android:src="@drawable/date" />

            <Button
                android:id="@+id/dateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="130dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="130dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape"
                android:text="@string/date"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="10dp"
            android:layout_weight="4"
            app:cardCornerRadius="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/infinity" />

            <Button
                android:id="@+id/mathBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="130dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="130dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape"
                android:text="@string/math"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                />


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="4"
            android:elevation="10dp"
            app:cardCornerRadius="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="2dp"
                android:layout_gravity="right"
                android:layout_marginRight="12dp"
                android:src="@drawable/years" />

            <Button
                android:id="@+id/yearBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="130dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="130dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape"
                android:text="@string/year"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textStyle="bold" />


        </android.support.v7.widget.CardView>

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_weight="4"
    android:elevation="10dp"
    app:cardCornerRadius="5dp"
    >

    <Button
        android:id="@+id/quizBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:background="@drawable/shape"
        android:text="@string/quiz"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/stopwatch"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="10dp"/>


</android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>


<!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical"-->
    <!--android:weightSum="2"-->
    <!--android:id="@+id/linear"-->
   <!--&gt;-->


    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="2"-->
        <!--android:src="@drawable/the"-->
        <!--android:layout_marginTop="2dp"-->
        <!--/>-->
<!--</LinearLayout>-->

<!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal"-->
    <!--android:layout_below="@+id/linear"-->
    <!--android:weightSum="4"-->
    <!--android:id="@+id/linear1">-->


    <!--<android.support.v7.widget.CardView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="10dp"-->
        <!--android:elevation="10dp"-->
        <!--app:cardCornerRadius="5dp"-->
        <!--android:layout_weight="2">-->

        <!--<de.hdodenhof.circleimageview.CircleImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--android:layout_marginTop="2dp"-->
            <!--android:src="@drawable/years" />-->

        <!--<Button-->
            <!--android:id="@+id/yearBtn"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:layout_marginTop="130dp"-->
            <!--android:background="@drawable/shape"-->
            <!--android:text="@string/year"-->
            <!--android:textColor="@color/colorWhite"-->
            <!--android:textSize="18sp"-->
            <!--android:textStyle="bold" />-->


    <!--</android.support.v7.widget.CardView>-->


    <!--<android.support.v7.widget.CardView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="10dp"-->
        <!--android:elevation="10dp"-->
        <!--app:cardCornerRadius="5dp"-->
        <!--android:layout_weight="2">-->

        <!--<de.hdodenhof.circleimageview.CircleImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--android:layout_marginTop="2dp"-->
            <!--android:src="@drawable/math" />-->

        <!--<Button-->
            <!--android:id="@+id/mathBtn"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:layout_marginTop="130dp"-->
            <!--android:background="@drawable/shape"-->
            <!--android:text="@string/math"-->
            <!--android:textColor="@color/colorWhite"-->
            <!--android:textSize="18sp"-->
            <!--android:textStyle="bold" />-->


    <!--</android.support.v7.widget.CardView>-->

<!--</LinearLayout>-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_below="@+id/linear1"-->
        <!--android:weightSum="4"-->
        <!--android:id="@+id/linear2">-->


        <!--<android.support.v7.widget.CardView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="10dp"-->
            <!--android:elevation="10dp"-->
            <!--app:cardCornerRadius="5dp"-->
            <!--android:layout_weight="2">-->

            <!--<de.hdodenhof.circleimageview.CircleImageView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="8dp"-->
                <!--android:layout_marginTop="2dp"-->
                <!--android:src="@drawable/fact" />-->

            <!--<Button-->
                <!--android:id="@+id/triviaBtn"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="5dp"-->
                <!--android:layout_marginTop="130dp"-->
                <!--android:background="@drawable/shape"-->
                <!--android:text="@string/trivia"-->
                <!--android:textColor="@color/colorWhite"-->
                <!--android:textSize="18sp"-->
                <!--android:textStyle="bold" />-->


        <!--</android.support.v7.widget.CardView>-->


        <!--<android.support.v7.widget.CardView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="10dp"-->
            <!--android:elevation="10dp"-->
            <!--app:cardCornerRadius="5dp"-->
            <!--android:layout_weight="2">-->

            <!--<de.hdodenhof.circleimageview.CircleImageView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="8dp"-->
                <!--android:layout_marginTop="2dp"-->
                <!--android:src="@drawable/date" />-->

            <!--<Button-->
                <!--android:id="@+id/dateBtn"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="5dp"-->
                <!--android:layout_marginTop="130dp"-->
                <!--android:background="@drawable/shape"-->
                <!--android:text="@string/date"-->
                <!--android:textColor="@color/colorWhite"-->
                <!--android:textSize="18sp"-->
                <!--android:textStyle="bold" />-->


        <!--</android.support.v7.widget.CardView>-->

    <!--</LinearLayout>-->












    <com.google.android.gms.ads.AdView
    android:id="@+id/adView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    app:adSize="BANNER"
    android:layout_marginBottom="55dp"
    app:adUnitId="@string/banner_ad_unit_id">
</com.google.android.gms.ads.AdView>


    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_nav"
        android:layout_alignParentBottom="true"
        app:menu="@menu/main_menu"
        android:background="@color/colorPrimaryDark"
        app:itemIconTint="#ffffff"
        app:itemTextColor="#ffffff"/>



</RelativeLayout>
